# newhorizons

./: README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
cli/: __init__.py  create.py  main.py
database/: __init__.py  db.py
tests/: conftest.py  test_db.py
tests/resources/: sample.csv
