[project]
name = "newhorizons"
version = "0.1"
description = "Analyzes a comprehensive collection of Animal Crossing: New Horizons data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.2.240807",
]

[dependency-groups]
dev = [
    "poethepoet>=0.32.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
lint = [
    "mypy>=1.14.1",
    "pylint>=3.3.4",
    "ruff>=0.9.3",
]

[tool.poe.tasks]
test = "pytest --cov --cov-report term-missing"

_imports = "ruff check --select I --fix database/ cli/ tests/"
_format = "ruff format database/ cli/ tests/"
format.sequence = ["_imports", "_format"]

_type = "mypy database/ cli/"
_check = "ruff check database/ cli/"
_lint = "pylint database/ cli/"

lint.sequence = ["_type", "_check", "_lint"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["database/"]
